platform/existingcluster/jobs/rook-ceph-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: rook-ceph-gateway
  namespace: rook-ceph
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: https-rgw
        number: 8443
        protocol: HTTPS
      tls:
        credentialName: istio-ingressgateway-certs
        mode: SIMPLE
        privateKey: sds
        serverCertificate: sds
